# fedora-factory-reset

./: CMakeLists.txt  README.md
kcm-module/: CMakeLists.txt
kcm-module/resources/: factory-reset.desktop  factory-reset.json
kcm-module/src/: factory-reset-helper.cpp  factory-reset-helper.h  factory-reset-kcm.cpp  factory-reset-kcm.h
recorder/: CMakeLists.txt  fedora-package-recorder.cpp  fedora-package-recorder.service
